z-index fix

--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -103,7 +103,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    z-index: 5;
+    z-index: 10;
 
     .container {
       display: flex;
