--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -13,7 +13,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 5;
+    z-index: 10;
     padding-bottom: 0;
 
     .logo {
