--- a/app/components/main-controls/main-controls.scss
+++ b/app/components/main-controls/main-controls.scss
@@ -1,7 +1,7 @@
 .main-controls {
   display: block;
   pointer-events: none;
-  z-index: 5;
+  z-index: 10;
 
   .container {
     display: flex;
