--- a/app/pages/main/main.scss
+++ b/app/pages/main/main.scss
@@ -11,13 +11,14 @@
     width: 100%;
     min-height: 100vh;
     opacity: 0;
-    z-index: -1;
+    z-index: 7;
+    pointer-events: none;
 
-    @include transition(opacity, z-index);
+    @include transition(opacity);
 
     &_active {
+      pointer-events: all;
       opacity: 1;
-      z-index: 4;
     }
   }
 
@@ -42,6 +43,7 @@
     left: 50%;
     top: 50%;
     width: 100%;
+    z-index: 10;
   }
 
   &__slides {
